build/deployment-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-frontend
  labels:
    app: nginx

spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: index.docker.io/djimydev/safrontend
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "2000m"
          requests:
            cpu: "100m"
        ports:
        - containerPort: 80
