build/deployment-webapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: index.docker.io/djimydev/sawebapp
        resources:
          limits:
            memory: "128Mi"
            cpu: "2000m"
          requests:
            cpu: "100m"
        ports:
        - containerPort: 8080
