build/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
