build/service-logic.yml
apiVersion: v1
kind: Service
metadata:
  name: salogic
spec:
  type: ClusterIP
  selector:
    app: salogic
  ports:
    - port: 80
      targetPort: 5000
