build/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-vs

spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
    - route:
      - destination:
          host: safrontend
